Completed base functionality as per assessment guidelines

--- a/client/src/components/Task/Task.css
+++ b/client/src/components/Task/Task.css
@@ -1,6 +1,10 @@
 .task{
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+}
+.task .task_complete input{
+    cursor: pointer;
+    scale: 2;
 }
