BONUS: Added login feature - ToDO: Cleanup & Documentation

--- a/client/src/islands/UpsertTask/UpsertTask.css
+++ b/client/src/islands/UpsertTask/UpsertTask.css
@@ -1,3 +1,5 @@
+@import url('./../../index.css');
+
 #upsert_task{
     padding: 50px 200px 50px 200px;
     display: flex;
@@ -36,32 +38,7 @@
     align-items: start;
     gap: 10px;
 }
-.forminput{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-}
-.forminput label{
-    font-size: 20px;
-    padding-left: 10px;
-}
-.forminput input, .forminput select, .forminput textarea{
-    width: 100%;
-    max-width: 515px;
-    height: 62px;
-    padding: 5px;
-    box-sizing: border-box;
-    border-radius: 20px;
-    border: 1px solid black;
-    font-size: 22px;
-}
-.forminput textarea{
-    border-bottom-right-radius: 0;
-    resize: vertical;
-    min-height: 62px;
-    height: 245px;
-    padding: 10px;
-}
+
 #buttons{
     display: flex;
     gap: 20px;
