--- a/client/src/islands/UpsertTask/UpsertTask.css
+++ b/client/src/islands/UpsertTask/UpsertTask.css
@@ -5,6 +5,8 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    min-height: 100vh;
+    box-sizing: border-box;
 }
 #tools{
     display: flex;
