--- a/client/src/islands/TaskView/TaskView.css
+++ b/client/src/islands/TaskView/TaskView.css
@@ -19,3 +19,35 @@
     font-weight: bold;
     cursor: pointer;
 }
+
+.notasks{
+    background-color: rgb(229, 229, 229);
+    padding: 20px;
+    min-height: 250px;
+    max-height: 500px;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: fit-content;
+    margin: 0 auto;
+}
+
+.notasks h2{
+    font-size: 50px;
+}
+.notasks p{
+    font-size: 25px;
+}
+.notasks button{
+    height: 40px;
+    font-size: 18px;
+    font-weight: bold;
+    border: none;
+    background-color: #FFD257;
+    cursor: pointer;
+    padding: 5px 10px 5px 10px;
+    transition: all 500ms;
+    border-radius: 10px;
+}
